New png export using convertapi

--- a/css/statistik.css
+++ b/css/statistik.css
@@ -1,5 +1,5 @@
 div.dc-chart {
-    float: left;
+    /*float: left;*/
 	font-family:Arial, sans-serif;
 	-webkit-user-select: none;  /* Chrome 49+ */
 	-moz-user-select: none;     /* Firefox 43+ */
